# 2026-06_robotics_hacklab

./: .gitignore  README.md  cuda_torch_install_commands.txt  decision_layer_test_commands.txt  e2e_test_commands.txt  info.md  training_commands.txt
config/: overhead_camera.json  wrist_camera.json
docs/: modelselection.md
object_classification/: README.md  arm_hover_move.py  first_pick_sequence.py  object_classification.py  object_home_coordinates.py  pick_pose_node.py  requirements.txt  voice_trigger.py  (+1 more)
py/: .gitignore  pyproject.toml
py/scripts/: check_calibration.py  generate_apriltags.py  real_analytic_pick_and_place.py  record_episodes.py  record_teleop.py  replay_episode.py  run_vla_grasp_sim.py  run_vla_real.py  run_vla_sim.py  showcamfeed.py  showcamfeeds.py  simplify_meshes.py  teleop_mixed.py  test_multiarm_scene.py  view_mixed.py  view_multiarm_mixed.py  view_multiarm_scene.py  view_scene.py  view_trajectory.py
py/scripts/hackathon/: real.py
py/scripts/pick_and_place/: real.py
py/src/pick_and_place/: __init__.py  arm_config.py  arm_workspace.py  builder.py  collision_boxes.py  decision.py  environment.py  episodes.py  executor.py  export.py  geometry.py  grasp_segment.py  ik.py  image_rectify.py  kinematics.py  materials.py  multiarm_scene.py  paper_detection.py  recorder.py  safety.py  scene.py  sim_recorder.py  trajectory.py  transforms.py  vla.py  workspace_overlays.py
py/tests/: test_builder.py  test_executor.py  test_paper_detection.py  test_pick_cube.py  test_recovery_trajectory.py  test_release_replan.py  test_scene.py  test_trajectory.py
(+55 files in other folders)
