[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pick-and-place"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.0",
    "pymeshlab>=2023.12",
    "tqdm>=4.67",
    "trimesh[easy]>=4.0",
]

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = []

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
